# se-homework

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
db_resource/: chargesys.sql  charging_piles_table.sql  charging_requests_table.sql
src/: App.vue  db.rs  lib.rs  main.js  main.rs
src/billing/: billing_record.rs  fee_calculator.rs  mod.rs  time_slot.rs
src/models/: charging_pile.rs  charging_record.rs  charging_request.rs  mod.rs  user.rs  vehicle.rs
src/router/: index.js
src/routes/: billing_api.rs  charging_record_api.rs  charging_request_api.rs  mod.rs  pile_api.rs  scheduler_api.rs  user.rs
src/scheduler/: dispatcher.rs  mod.rs  number_generator.rs  queue_manager.rs
src/views/: Admin.vue  Details.vue  Home.vue  Main.vue  Register.vue  Request.vue
