[package]
name = "charging_station"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.17"
parking_lot = "0.12"
